# imdb-data-analysis

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
docs/: README.md
docs/sphinx/: conf.py  index.rst  src.rst
src/: __main__.py  main.py
